--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,9 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.23.1'
-    testImplementation 'io.github.bonigarcia:webdrivermanager:5.9.2'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.24.0'
+    testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:4.24.0'
+    testImplementation 'io.github.bonigarcia:webdrivermanager:5.9.0'
 }
 
 test {
